test-package-compiler/tests/snapshots/compiler_tests__boundary_unicode_identifiers_parser.snap
---
source: test-package-compiler/tests/compiler_tests.rs
expression: output
---
AST:
Module {
    classes: [],
    method_definitions: [],
    protocols: [],
    type_aliases: [],
    native_declarations: [],
    expressions: [
        ExpressionStatement {
            comments: CommentAttachment {
                leading: [
                    Comment {
                        content: "Copyright 2026 James Casey",
                        span: Span {
                            start: 323,
                            end: 326,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                    Comment {
                        content: "SPDX-License-Identifier: Apache-2.0",
                        span: Span {
                            start: 323,
                            end: 326,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                    Comment {
                        content: "Test boundary condition: Unicode in identifiers and strings",
                        span: Span {
                            start: 323,
                            end: 326,
                        },
                        kind: Line,
                        preceding_blank_line: true,
                    },
                    Comment {
                        content: "Validate proper UTF-8 handling in lexer and parser",
                        span: Span {
                            start: 323,
                            end: 326,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                    Comment {
                        content: "Unicode characters in identifiers (if supported)",
                        span: Span {
                            start: 323,
                            end: 326,
                        },
                        kind: Line,
                        preceding_blank_line: true,
                    },
                    Comment {
                        content: "Note: This tests whether the lexer/parser gracefully handles or rejects Unicode",
                        span: Span {
                            start: 323,
                            end: 326,
                        },
                        kind: Line,
                        preceding_blank_line: false,
                    },
                ],
                trailing: None,
                leading_blank_line: false,
                blank_line_after_comments: false,
            },
            expression: Identifier(
                Identifier {
                    name: "caf",
                    span: Span {
                        start: 323,
                        end: 326,
                    },
                },
            ),
            preceding_blank_line: false,
        },
        ExpressionStatement {
            comments: CommentAttachment {
                leading: [],
                trailing: None,
                leading_blank_line: false,
                blank_line_after_comments: false,
            },
            expression: Error {
                message: "Invalid assignment target",
                span: Span {
                    start: 326,
                    end: 328,
                },
            },
            preceding_blank_line: false,
        },
    ],
    span: Span {
        start: 323,
        end: 800,
    },
    file_leading_comments: [],
    file_trailing_comments: [],
}

Diagnostics:
Diagnostic { severity: Error, message: "Unexpected token: expected expression, found <error: é>", span: Span { start: 326, end: 328 }, hint: None, category: None, notes: [], provision: None }
Diagnostic { severity: Error, message: "Assignment target must be an identifier or field access", span: Span { start: 326, end: 328 }, hint: None, category: None, notes: [], provision: None }
