test-package-compiler/tests/snapshots/compiler_tests__boundary_unicode_identifiers_semantic.snap
---
source: test-package-compiler/tests/compiler_tests.rs
expression: output
---
Semantic errors (1):
  - Undefined variable: caf
