test-package-compiler/tests/snapshots/compiler_tests__cascade_complex_semantic.snap
---
source: test-package-compiler/tests/compiler_tests.rs
expression: output
---
Semantic errors (6):
  - Undefined variable: object
  - Undefined variable: value1
  - Undefined variable: value2
  - Undefined variable: value3
  - Undefined variable: array
  - Undefined variable: processor
