test-package-compiler/tests/snapshots/compiler_tests__cascades_lexer.snap
---
source: test-package-compiler/tests/compiler_tests.rs
expression: output
---
Token { kind: Identifier("runCascade"), span: Span { start: 208, end: 218 }, leading_trivia: [LineComment("// Copyright 2026 James Casey"), Whitespace("\n"), LineComment("// SPDX-License-Identifier: Apache-2.0"), Whitespace("\n\n"), LineComment("// Test cascade message sends"), Whitespace("\n"), LineComment("// Sends multiple messages to the same receiver"), Whitespace("\n\n"), LineComment("// Method that uses a cascade - all messages go to counter"), Whitespace("\n")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Assign, span: Span { start: 219, end: 221 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: LeftBracket, span: Span { start: 222, end: 223 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("counter"), span: Span { start: 223, end: 230 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("increment"), span: Span { start: 231, end: 240 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Semicolon, span: Span { start: 240, end: 241 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("increment"), span: Span { start: 242, end: 251 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Semicolon, span: Span { start: 251, end: 252 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("getValue"), span: Span { start: 253, end: 261 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: RightBracket, span: Span { start: 261, end: 262 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Eof, span: Span { start: 263, end: 263 }, leading_trivia: [Whitespace("\n")], trailing_trivia: [] }
